--- a/hesap-silme.html
+++ b/hesap-silme.html
@@ -104,7 +104,7 @@
     </div>
 
     <div class="form-container">
-        <form action="https://formspree.io/f/mabcdefg" method="POST">
+        <form action="https://formspree.io/f/mwpwdgdv" method="POST">
             
             <div class="form-group">
                 <label for="name">Adınız Soyadınız</label>
